--- a/PROJECT 1_GYM/index.html
+++ b/PROJECT 1_GYM/index.html
@@ -12,8 +12,8 @@
     body {
         margin: 0px;
         padding: 0px;
-        background: url('img/man.jpg');
-        background-size: cover;
+        background: url('img/man.jpg') no-repeat;
+        background-size: 1500px;
         color: white;
     }
 
@@ -75,9 +75,9 @@
         color: rgb(136, 185, 171);
     }
 
-    .navbar li a.active {
+    .navbar li a.active:active {
         text-decoration: underline;
-        color: rgb(136, 185, 171);
+        color: rgb(67,79,208);
     }
 
     .btn {
